Changelog
=========

3.0b3 - Unreleased
------------------

- Fixed a deprecation warning for the isRightToLeft script, which is used in
  the translationbrower_popup.
  [hannosch]

- Removed the GlobalRequestPatch - it is no longer required.
  [hannosch]

- Removed the `not_available_lang` template. It wasn't used anymore.
  [hannosch]

- Use request negotiation by default.
  [hannosch]

- Turn on the content language negotiator by default.
  [hannosch]

- Avoid a space after the language name in the selector.
  [hannosch]

- Modernized the code of the language index export import handler.
  [hannosch]

- Refactored common functionality of the catalog exportimport handlers. Added
  automatic reindexing for newly added indexes.
  [hannosch]

- Rearranged the package documentation to the top-level of the distribution.
  [hannosch]

- Added a buildout configuration to the package for stand-alone testing.
  [hannosch]

- Fixed bad spelling in status message in translate view.
  [hannosch]

- Make sure to use the native language name in the language selector in the
  same way Plone itself does this.
  [hannosch]

- Specify an alt text on the language selector images. This closes
  http://plone.org/products/linguaplone/issues/188.
  [hannosch]

- Fixed invalid code instructions in the README. This closes
  http://plone.org/products/linguaplone/issues/207.
  [hannosch]

- Removed the long broken portlet_languages. This was a pre-Plone 3 old-style
  portlet. See http://plone.org/products/linguaplone/issues/209.
  [hannosch]

3.0b2 - 2009-09-25
------------------

- Don't forget the rest of the formvariables, when dealing with request.form.
  [tesdal]

3.0b1 - 2009-09-25
------------------

- Don't mangle request.form when allowing Unicode.
  [tesdal]

- Get default language from content parent inside portal factory.
  [tesdal]

- Added dynamic id attribute to <tr> in translate_item.cpt for easier styling.
  [jensens, hpeteragitator]

3.0a3 - 2009-09-09
------------------
