@@ -1,52 +1,0 @@
-<tal:block define="charset here/portal_properties/site_properties/default_charset|here/portal_properties/default_charset|string:utf-8;
-        content_type python:request.RESPONSE.setHeader('Content-Type', 'text/xml;;charset=%s' % charset);"
- replace='structure string:&lt;?xml version="1.0" encoding="${charset}" ?&gt;'>
-<?xml version="1.0"?>
-</tal:block>
-<libraries
-    xmlns:tal="http://xml.zope.org/namespaces/tal"
-    xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-    xmlns:xhtml="http://www.w3.org/1999/xhtml"
-    i18n:domain="kupu"
-    >
-
-<tal:with define="
-    getToolByName nocall:modules/Products.CMFCore.utils/getToolByName;
-    kupu_tool     python:getToolByName(context, 'kupu_library_tool');
-    libraries     python:kupu_tool.getCookedLibraries(context);
-    pss modules/Products/PythonScripts/standard;
-    translated_containers context/aq_parent/getTranslations|python:{};
-    languages translated_containers/keys;_ python:languages.sort();
-">
-   <debug tal:content="translated_containers" />
-
-   <tal:block repeat="library libraries">
-      <library tal:define="id library/id"
-               tal:condition="python:id!='current'"
-               tal:attributes="id library/id;selected library/selected;">
-         <uri tal:content="library/uri" />
-         <title tal:define="title library/title"
-                tal:content="structure python:pss.html_quote(title)" />
-         <src tal:content="library/src" />
-         <icon tal:content="library/icon" />
-      </library>
-      <tal:block define="id library/id"
-                 condition="python:id=='current'">
-         <library tal:repeat="lang languages"
-                  tal:attributes="id string:current_${lang};
-                  selected python:library['selected'] and False;">
-            <tal:block define="target python:translated_containers[lang][0];">
-               <uri tal:content="target/absolute_url" />
-               <title tal:define="title string:${library/title}($lang)"
-                      tal:content="structure python:pss.html_quote(title)" />
-               <src
-                   tal:content="string:${target/absolute_url}/kupucollection.xml?resource_type=${request/resource_type}" />
-               <icon tal:content="target/getIcon" />
-            </tal:block>
-         </library>
-      </tal:block>
-   </tal:block>
-
-</tal:with>
-
-</libraries>
