@@ -125,9 +125,7 @@
               class="group"
               tal:attributes="action here/absolute_url">
 
-        <fieldset
-                 tal:define="kupu context/kupu_library_tool;
-                 usekupu python:kupu.isKupuEnabled(REQUEST=request) and kupu.getRefBrowser();">
+        <fieldset>
 
             <legend i18n:translate="legend_link_translations">
                 Link translations
@@ -160,120 +158,13 @@
 
             </div>
 
-            <div class="field" tal:condition="usekupu">
-               <script type="text/javascript"
-                       tal:attributes="src portal/referencebrowser.js/absolute_url_path"
-                       ></script>
-               <label for="link_content_browse"
-                      i18n:translate="label_link_content">Content</label>
-
-               <div class="formHelp" i18n:translate="help_link_content">
-                  Select the content to link as a translation.
-               </div>
-
-               <div id="krb_drawer_base">
-                  <div class="kupu-librarydrawer-parent"></div>
-               </div>
-
-               <script type="text/javascript"
-                       tal:define="kupu context/kupu_library_tool;
-                       base python:kupu.getBaseUrl(here);
-                       uid context/UID|nothing;
-                       lib_prefix    string:${base}/linguaplonelibraries.xml?instance=$uid&amp;resource_type=;
-                       search_prefix string:${portal_url}/kupusearch.xml?instance=$uid&amp;resource_type=;
-                       select_prefix string:${portal_url}/kupuselection.xml?instance=$uid&amp;resource_type=;
-                       xsl_uri string:${portal_url}/kupudrawers/drawer.xsl;"
-                       tal:content="string:var content_language='${context/Language}';krb_initdrawer('$xsl_uri','$lib_prefix','$search_prefix','$select_prefix');">
-               </script>
-               <div 
-                    tal:define="multiVal python:0;
-                    fieldName string:link_content;
-                    rFieldName python:repr(unicode(fieldName))[1:];
-                    kupu context/kupu_library_tool;
-                    lookupObject nocall:here/reference_catalog/lookupObject;
-                    resource_type string:linguaplone-${context/portal_type};
-                    rt python:kupu.getResourceType(resource_type);
-                    label label|string:path;
-                    rLabel python:repr(unicode(label))[1:];
-                    value request/link_content|nothing;
-                    uids python:same_type(value, []) and value or [value];
-                    uids python:[u for u in uids if u];
-                    required python:0;
-                    referenced python:[ context.reference_catalog.lookupObject(uid) for uid in [value] if uid];
-                    info python:kupu.infoForBrains(referenced,rt);
-                    onchange onchange|nothing;
-                    ">
-               <script type="text/javascript">
-function openDrawer(e,f,l,m,r) {
-    referencebrowser_draweropen(e,f,l,m,r);;;
-    drawertool.drawers['krbdrawer-'+f].initialSelection = function() {
-        try {
-            var els = document.forms['linkTranslation'].elements['link_language'];
-            for (var i = 0; i < els.length; i++) {
-                if (els[i].checked) {
-                    this.selectLibrary('current_'+els[i].value);
-                    return;
-                };
-            };
-        } catch(e) {};
-        try { this.selectLibrary('current_'+content_language); } catch(e) {
-            try { this.selectLibrary('root'); } catch(e) {};
-        };
-    };
-}
-               </script>
-                     <input type="hidden"
-                            value=""
-                            tal:condition="python:not required and multiVal"
-                            tal:attributes="name string:$fieldName:default:list"
-                            />
-
-                     <div class="kupu-reference" tal:attributes="id string:${fieldName}_preview">
-                        <em class="empty-ref" i18n:translate="label_no_reference_set"
-                            tal:condition="not:info">
-                           No reference set. Click the browse button to select.
-                        </em>
-                        <em class="empty-ref" i18n:translate="label_no_reference_set"
-                            tal:condition="info" style="display:none">
-                           No reference set. Click the browse button to select.
-                        </em>
-                        <tal:loop repeat="i info">
-                           <div tal:define="odd repeat/i/odd" tal:attributes="class python:test(odd,'odd','even');">
-                              <a href="#" tal:attributes="href string:${i/url}/view;">
-                                 <div class="kupu-preview-row" tal:condition="i/preview">
-                                    <img tal:attributes="src i/preview; title i/title;"
-                                         onload="kupuFixImage(this);" width="1" height="1"/>
-                                 </div>
-                                 <h1 class="kupu-title-row" tal:content="i/title">Item heading</h1>
-                                 <div class="kupu-description-row" tal:content="structure i/description" tal:condition="i/description"></div>
-                                 <div style="clear:both;line-height:1px;">&#xa0;</div>
-                              </a>
-                           </div>
-                        </tal:loop>
-                     </div>
-
-                     <textarea style="display:none"
-                               tal:attributes="name string:${fieldName}:lines;
-                               id string:${fieldName};onchange onchange"
-                               tal:content="python:'\n'.join(uids)"></textarea>
-                     <div>
-                        <input type="button" 
-                               class="searchButton"
-                               value="Browse..." 
-                               onclick=""
-                               i18n:attributes="value label_browse;"
-                               tal:attributes="onclick string:openDrawer(event,$rFieldName,$rLabel,$multiVal,escape('$resource_type'));;;" />
-                     </div>          
-               </div>
-            </div>
-            <div class="field" tal:condition="not:usekupu"
+            <div class="field"
                  tal:define="startup_directory python:here.referencebrowser_startupDirectory('');
                              value request/link_content | nothing;
                              fieldName string:link_content;
                              fieldRealName fieldName;
                              at_url python:'/'.join(here.getPhysicalPath());
-                             at_type here/portal_type;
-                 ">
+                             at_type here/portal_type;">
 
                 <label for="link_content_browse"
                        i18n:translate="label_link_content">Content</label>
@@ -338,8 +229,6 @@ function openDrawer(e,f,l,m,r) {
 
         </form>
       </tal:untranslated>
-
-
 
         <h2 i18n:translate="header_remove_translations">
             Remove translations
